--- a/jackpot-mudah-di-gates-of-olympus.html
+++ b/jackpot-mudah-di-gates-of-olympus.html
@@ -16,9 +16,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
             <link rel="canonical" href="https://berita-cuan.github.io/viral/jackpot-mudah-di-gates-of-olympus.html"/>
         <link rel="alternate" href="https://berita-cuan.github.io/viral/jackpot-mudah-di-gates-of-olympus.html" hreflang="id-ID"/>
-        <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/IvJwgHQ.png"/>
-        <link rel="apple-touch-icon" href="https://i.imgur.com/IvJwgHQ.png"/>
-        <link rel="icon" type="image/x-icon" href="https://i.imgur.com/IvJwgHQ.png"/>
+        <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/PyiX2zt.png"/>
+        <link rel="apple-touch-icon" href="https://i.imgur.com/PyiX2zt.png"/>
+        <link rel="icon" type="image/x-icon" href="https://i.imgur.com/PyiX2zt.png"/>
         <link rel="shortcut icon" href="https://i.imgur.com/PyiX2zt.png">
         <!-- Website -->
         <title>Trik Jitu Raup Puluhan Juta! Gunakan 1 Pola Ampuh Ini untuk Jackpot Mudah di Gates of Olympus!</title>
