scatter-mahjong-wins-3-tergacor.html

--- a/scatter-mahjong-wins-3-tergacor.html
+++ b/scatter-mahjong-wins-3-tergacor.html
@@ -3,6 +3,7 @@
 
 
 
+
 <!doctype html>
 <html ⚡ lang="id">
     <head>
@@ -127,7 +128,7 @@
                 </tr>
                 <tr>
                     <td>Nama Situs</td>
-                    <td> ⚡️ RTP SLOT GACOR</td>
+                    <td> Scatter Mahjong Wins 3 </td>
                 </tr>
                 <tr>
                     <td>Min. Depo</td>
