--- a/temukan-slot-mahjong-ways-terbaru-hari-ini.html
+++ b/temukan-slot-mahjong-ways-terbaru-hari-ini.html
@@ -214,8 +214,8 @@
             </div>
           </div>
           <div class='button-wrapper'>
-            <a href='https://rajapupuksawit.pro/OVOSLOT88dc' rel = "nofollow" class='btn-secondary'>Daftar</a>
-            <a href='https://rajapupuksawit.pro/OVOSLOT88dc' rel = "nofollow" class='btn-primary'>Login</a>
+            <a href='https://t.ly/github-ovoslot88' rel = "nofollow" class='btn-secondary'>Daftar</a>
+            <a href='https://t.ly/github-ovoslot88' rel = "nofollow" class='btn-primary'>Login</a>
           </div>
         </div>
       <br>
@@ -235,10 +235,10 @@
         <section class='n-container m-b-normal'>
       <div class="btn-body">
         <div class="btn-items">
-          <a href="https://rajapupuksawit.pro/OVOSLOT88dc" rel="nofollow noreferrer" target="_blank">🌟 Klaim Bonus 🌟</a>
+          <a href="https://t.ly/github-ovoslot88" rel="nofollow noreferrer" target="_blank">🌟 Klaim Bonus 🌟</a>
         </div>
         <div class="btn-items">
-          <a href="https://rajapupuksawit.pro/OVOSLOT88dc" rel="nofollow noreferrer" target="_blank">🌟 DAFTAR 🌟</a>
+          <a href="https://t.ly/github-ovoslot88" rel="nofollow noreferrer" target="_blank">🌟 DAFTAR 🌟</a>
         </div>
       </div>
     </section>
