--- a/temukan-slot-mahjong-ways-terbaru-hari-ini.html
+++ b/temukan-slot-mahjong-ways-terbaru-hari-ini.html
@@ -14,8 +14,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="mobile-web-app-capable" content="yes"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-            <link rel="canonical" href="https://mediajatim.github.io/news/dapatkan-selot-mahjong-ways-terupdate-hari-ini.html"/>
-        <link rel="alternate" href="https://mediajatim.github.io/news/dapatkan-selot-mahjong-ways-terupdate-hari-ini.html" hreflang="id-ID"/>
+            <link rel="canonical" href="https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html"/>
+        <link rel="alternate" href="https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html" hreflang="id-ID"/>
         <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/IvJwgHQ.png"/>
         <link rel="apple-touch-icon" href="https://i.imgur.com/IvJwgHQ.png"/>
         <link rel="icon" type="image/x-icon" href="https://i.imgur.com/IvJwgHQ.png"/>
@@ -38,7 +38,7 @@
         <!-- Facebook -->
         <meta property="og:title" content="Temukan Slot Mahjong Ways Terbaru Hari Ini, Dijamin Mudah Menang Ratusan Juta!"/>
         <meta property="og:description" content="Nikmati keseruan bermain Selot Mahjong Ways dengan fitur terbaru yang menjanjikan kemenangan besar! Temukan trik dan tips terbaik untuk menang ratusan juta rupiah dengan mudah."/>
-        <meta property="og:url" content="https://mediajatim.github.io/news/dapatkan-selot-mahjong-ways-terupdate-hari-ini.html"/>
+        <meta property="og:url" content="https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html"/>
         <meta property="og:image" content="https://i.imgur.com/vyrKW7e.jpeg"/>
         <meta property="og:image:type" content="image/jpg"/>
         <meta property="og:site_name" content="Jawa barat"/>
@@ -155,7 +155,7 @@
             "@type": "Organization",
             "name": "Jawa barat",
             "alternateName": "Temukan Slot Mahjong Ways Terbaru Hari Ini, Dijamin Mudah Menang Ratusan Juta!",
-            "url": "https://mediajatim.github.io/news/dapatkan-selot-mahjong-ways-terupdate-hari-ini.html",
+            "url": "https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html",
             "logo": "https://i.imgur.com/IvJwgHQ.png"
           }
         </script>
@@ -167,12 +167,12 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://mediajatim.github.io/news/dapatkan-selot-mahjong-ways-terupdate-hari-ini.html"
+              "item": "https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html"
             }, {
               "@type": "ListItem",
               "position": 2,
               "name": "Jawa barat",
-              "item": "https://mediajatim.github.io/news/dapatkan-selot-mahjong-ways-terupdate-hari-ini.html"
+              "item": "https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html"
             }]
           }
         </script>
@@ -182,7 +182,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "https://mediajatim.github.io/news/dapatkan-selot-mahjong-ways-terupdate-hari-ini.html"
+              "@id": "https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html"
             },
             "headline": "Temukan Slot Mahjong Ways Terbaru Hari Ini, Dijamin Mudah Menang Ratusan Juta!",
             "description": "Nikmati keseruan bermain Selot Mahjong Ways dengan fitur terbaru yang menjanjikan kemenangan besar! Temukan trik dan tips terbaik untuk menang ratusan juta rupiah dengan mudah.",
@@ -190,7 +190,7 @@
             "author": {
               "@type": "Organization",
               "name": "Jawa barat",
-              "url": "https://mediajatim.github.io/news/dapatkan-selot-mahjong-ways-terupdate-hari-ini.html"
+              "url": "https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html"
             },
             "publisher": {
               "@type": "Organization",
@@ -321,7 +321,7 @@
         </section>
     
         <section class='n-container m-b-normal'>
-          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://mediajatim.github.io/news/dapatkan-selot-mahjong-ways-terupdate-hari-ini.html" class="rainbow-text">Media Jatim. All Rights Reserved. 18+</span></div>
+          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html" class="rainbow-text">Media Jatim. All Rights Reserved. 18+</span></div>
         </section>
       </body>
     </html>
