--- a/temukan-slot-mahjong-ways-terbaru-hari-ini.html
+++ b/temukan-slot-mahjong-ways-terbaru-hari-ini.html
@@ -16,9 +16,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
             <link rel="canonical" href="https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html"/>
         <link rel="alternate" href="https://berita-cuan.github.io/viral/temukan-slot-mahjong-ways-terbaru-hari-ini.html" hreflang="id-ID"/>
-        <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/IvJwgHQ.png"/>
-        <link rel="apple-touch-icon" href="https://i.imgur.com/IvJwgHQ.png"/>
-        <link rel="icon" type="image/x-icon" href="https://i.imgur.com/IvJwgHQ.png"/>
+        <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/PyiX2zt.png"/>
+        <link rel="apple-touch-icon" href="https://i.imgur.com/PyiX2zt.png"/>
+        <link rel="icon" type="image/x-icon" href="https://i.imgur.com/PyiX2zt.png"/>
         <link rel="shortcut icon" href="https://i.imgur.com/PyiX2zt.png">
         <!-- Website -->
         <title>Temukan Slot Mahjong Ways Terbaru Hari Ini, Dijamin Mudah Menang Ratusan Juta!</title>
