7-ramalan-shio-ular-17-18-feb-2025.html

--- a/7-ramalan-shio-ular-17-18-feb-2025.html
+++ b/7-ramalan-shio-ular-17-18-feb-2025.html
@@ -11,8 +11,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="canonical" href="https://medandaily.github.io/news/Ramalan-Shio-Ular-Keberuntungan-Dengan-Tips-untuk-Bermain-Kasino-Online-RTP-Tinggi-Mahjong-Ways-Suku-Maya" />
-        <link rel="alternate" href="https://medandaily.github.io/news/Ramalan-Shio-Ular-Keberuntungan-Dengan-Tips-untuk-Bermain-Kasino-Online-RTP-Tinggi-Mahjong-Ways-Suku-Maya" hreflang="id-ID" />
+        <link rel="canonical" href="https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html" />
+        <link rel="alternate" href="https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html" hreflang="id-ID" />
         <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/l4V2XGm.png" />
         <link rel="apple-touch-icon" href="https://i.imgur.com/l4V2XGm.png" />
         <link rel="icon" type="image/x-icon" href="https://i.imgur.com/l4V2XGm.png" />
@@ -34,7 +34,7 @@
         <!-- Facebook -->
         <meta property="og:title" content=" 7 Ramalan Shio Ular 17-18 Feb 2025: Tips Kasino RTP Tinggi & Pola Jitu Mahjong Ways 2!" />
         <meta property="og:description" content="Ramalan Shio Ular 14-15 Februari 2025 dan tips bermain kasino online dengan RTP Tinggi untuk meningkatkan peluang kemenangan." />
-        <meta property="og:url" content="https://medandaily.github.io/news/Ramalan-Shio-Ular-Keberuntungan-Dengan-Tips-untuk-Bermain-Kasino-Online-RTP-Tinggi-Mahjong-Ways-Suku-Maya" />
+        <meta property="og:url" content="https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html" />
         <meta property="og:image" content="https://i.imgur.com/L0DC2aA.jpeg" />
         <meta property="og:image:type" content="image/jpg" />
         <meta property="og:site_name" content="Medan Daily News" />
@@ -151,7 +151,7 @@
             "@type": "Organization",
             "name": "Situs Gachor",
             "alternateName": " 7 Ramalan Shio Ular 17-18 Feb 2025: Tips Kasino RTP Tinggi & Pola Jitu Mahjong Ways 2!",
-            "url": "https://medandaily.github.io/news/Ramalan-Shio-Ular-Keberuntungan-Dengan-Tips-untuk-Bermain-Kasino-Online-RTP-Tinggi-Mahjong-Ways-Suku-Maya",
+            "url": "https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html",
             "logo": "https://i.imgur.com/l4V2XGm.png"
           }
         </script>
@@ -163,12 +163,12 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://medandaily.github.io/news/Ramalan-Shio-Ular-Keberuntungan-Dengan-Tips-untuk-Bermain-Kasino-Online-RTP-Tinggi-Mahjong-Ways-Suku-Maya"
+              "item": "https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html"
             }, {
               "@type": "ListItem",
               "position": 2,
               "name": "Situs Gachor",
-              "item": "https://medandaily.github.io/news/Ramalan-Shio-Ular-Keberuntungan-Dengan-Tips-untuk-Bermain-Kasino-Online-RTP-Tinggi-Mahjong-Ways-Suku-Maya"
+              "item": "https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html"
             }]
           }
         </script>
@@ -178,7 +178,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "https://medandaily.github.io/news/Ramalan-Shio-Ular-Keberuntungan-Dengan-Tips-untuk-Bermain-Kasino-Online-RTP-Tinggi-Mahjong-Ways-Suku-Maya"
+              "@id": "https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html"
             },
             "headline": " 7 Ramalan Shio Ular 17-18 Feb 2025: Tips Kasino RTP Tinggi & Pola Jitu Mahjong Ways 2!",
             "description": "Ramalan Shio Ular 14-15 Februari 2025 dan tips bermain kasino online dengan RTP Tinggi untuk meningkatkan peluang kemenangan.",
@@ -186,7 +186,7 @@
             "author": {
               "@type": "Organization",
               "name": "Medan Daily News",
-              "url": "https://medandaily.github.io/news/Ramalan-Shio-Ular-Keberuntungan-Dengan-Tips-untuk-Bermain-Kasino-Online-RTP-Tinggi-Mahjong-Ways-Suku-Maya"
+              "url": "https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html"
             },
             "publisher": {
               "@type": "Organization",
@@ -206,7 +206,7 @@
         <div class='nav'>
           <div class='logo'>
             <div class='logo-inner'>
-              <amp-img src='https://imagizer.imageshack.com/img923/6407/Ngoz27.png' width='350' height='90' layout='intrinsic'></amp-img>
+              <amp-img src='https://i.imgur.com/l4V2XGm.png' width='350' height='90' layout='intrinsic'></amp-img>
             </div>
           </div>
           <div class='button-wrapper'>
@@ -231,12 +231,12 @@
       <div class="btn-body">
         <div class="btn-items">
           <a href="https://t.ly/alt-oyo777" rel="nofollow noreferrer" target="_blank">
-            <amp-img src="https://psomantap.github.io/news/pso999logo.png" width="150" height="50" alt="Daftar HappyMPO" layout="fixed"></amp-img>
+            <amp-img src="https://berita-cuan.github.io/viral/image-removebg-preview.png" width="150" height="50" alt="Daftar HappyMPO" layout="fixed"></amp-img>
           </a>
         </div>
         <div class="btn-items">
           <a href="https://t.ly/alt-oyo777" rel="nofollow noreferrer" target="_blank">
-            <amp-img src="https://psomantap.github.io/news/pso999logo.png" width="150" height="50" alt="Login HappyMPO" layout="fixed"></amp-img>
+            <amp-img src="https://berita-cuan.github.io/sumber/image-removebg-preview.png" width="150" height="50" alt="Login HappyMPO" layout="fixed"></amp-img>
           </a>
         </div>
       </div>
@@ -335,7 +335,7 @@
         </section>
     
         <section class='n-container m-b-normal'>
-          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://medandaily.github.io/news/Ramalan-Shio-Ular-Keberuntungan-Dengan-Tips-untuk-Bermain-Kasino-Online-RTP-Tinggi-Mahjong-Ways-Suku-Maya.html" class="rainbow-text">Medan Daily News</a>. Reserved.</span></div>
+          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html.html" class="rainbow-text">Medan Daily News</a>. Reserved.</span></div>
         </section>
       </body>
     </html>
