--- a/7-ramalan-shio-ular-17-18-feb-2025.html
+++ b/7-ramalan-shio-ular-17-18-feb-2025.html
@@ -23,7 +23,7 @@
         <meta name="categories" content="website" />
         <meta name="language" content="id-ID" />
         <meta name="rating" content="general" />
-        <meta name="copyright" content="Situs Gachor" />
+        <meta name="copyright" content="OYO777" />
         <meta name="author" content="Medan Daily News" />
         <meta name="publisher" content="Medan Daily News" />
         <meta name="distribution" content="global" />
@@ -42,13 +42,13 @@
         <meta property="og:locale" content="id_ID" />
         <meta property="og:type" content="website" />
         <!-- Twitter -->
-        <meta name="twitter:card" content="Situs Gachor" />
+        <meta name="twitter:card" content="OYO777" />
         <meta name="twitter:title" content=" 7 Ramalan Shio Ular 17-18 Feb 2025: Tips Kasino RTP Tinggi & Pola Jitu Mahjong Ways 2!" />
         <meta name="twitter:description" content="Ramalan Shio Ular 14-15 Februari 2025 dan tips bermain kasino online dengan RTP Tinggi untuk meningkatkan peluang kemenangan." />
         <meta name="twitter:url" content="$url" />
         <meta name="twitter:image" content="https://i.imgur.com/L0DC2aA.jpeg" />
-        <meta name="twitter:site" content="Situs Gachor" />
-        <meta name="twitter:creator" content="Situs Gachor" />
+        <meta name="twitter:site" content="OYO777" />
+        <meta name="twitter:creator" content="OYO777" />
         <meta name="twitter:label1" content="Estimasi waktu membaca" />
         <meta name="twitter:data1" content="7 menit" />
         <!-- Preload -->
@@ -149,7 +149,7 @@
           {
             "@context": "https://schema.org",
             "@type": "Organization",
-            "name": "Situs Gachor",
+            "name": "OYO777",
             "alternateName": " 7 Ramalan Shio Ular 17-18 Feb 2025: Tips Kasino RTP Tinggi & Pola Jitu Mahjong Ways 2!",
             "url": "https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html",
             "logo": "https://i.imgur.com/l4V2XGm.png"
@@ -167,7 +167,7 @@
             }, {
               "@type": "ListItem",
               "position": 2,
-              "name": "Situs Gachor",
+              "name": "OYO777",
               "item": "https://berita-cuan.github.io/viral/7-ramalan-shio-ular-17-18-feb-2025.html"
             }]
           }
@@ -222,7 +222,7 @@
               <div class="marquee-text" style="background-color: var(--primary); color: #000; padding: 5px 0; border: 1px solid #000; border-radius: 5px;margin-bottom: 5px;">
                 <div><a class="rainbow-text">Event Giveaway 10K </a> - <a class="rainbow-text"> Bonus Extra Spin 30% </a> - <a class="rainbow-text"> Bonus Cashback Slot 7% </a> - <a class="rainbow-text"> Bonus Referral 1% Seumur Hidup </a></div>
               </div>
-              <amp-img src='https://i.imgur.com/L0DC2aA.jpeg' width='1280' height='720' layout='responsive' alt='Situs Gachor'></amp-img>
+              <amp-img src='https://i.imgur.com/L0DC2aA.jpeg' width='1280' height='720' layout='responsive' alt='OYO777'></amp-img>
             </div>
           </div>
         </header>
@@ -244,11 +244,11 @@
         
         <section class='n-container m-b-normal'>
           <table style="width: 100%;">
-            <thead><tr><th colspan="3" style ="font-size: 20px;color:#fff;padding-bottom: 20px;">Informasi Situs Gachor</th></tr></thead>
+            <thead><tr><th colspan="3" style ="font-size: 20px;color:#fff;padding-bottom: 20px;">Informasi OYO777</th></tr></thead>
             <tbody>
               <tr>
                 <td><a class="rainbow-text">Nama Situs</a></td>
-                <td class="#">🚀 <a href="https://t.ly/alt-oyo777" class="rainbow-text">Situs Gachor</a></td>
+                <td class="#">🚀 <a href="https://t.ly/alt-oyo777" class="rainbow-text">OYO777</a></td>
               </tr>
               <tr>
                 <td><a class="rainbow-text">Deposit</a></td>
