raih-mega-scatter-hitam.html

--- a/raih-mega-scatter-hitam.html
+++ b/raih-mega-scatter-hitam.html
@@ -129,7 +129,7 @@
                 </tr>
                 <tr>
                     <td>Nama Situs</td>
-                    <td> ⚡️ RTP SLOT GACOR</td>
+                    <td> OVOSLOT88</td>
                 </tr>
                 <tr>
                     <td>Min. Depo</td>
