tips-mudah-menang-di-mahjong-ways-2-hari-ini.html

--- a/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html
+++ b/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html
@@ -14,8 +14,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes"/>
         <meta name="mobile-web-app-capable" content="yes"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-            <link rel="canonical" href="https://citilink-id.github.io/vip/cara-paling-gampang-menang-di-mahjong-ways-2-hari-ini.html"/>
-        <link rel="alternate" href="https://citilink-id.github.io/vip/cara-paling-gampang-menang-di-mahjong-ways-2-hari-ini.html" hreflang="id-ID"/>
+            <link rel="canonical" href="https://berita-cuan.github.io/viral/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html"/>
+        <link rel="alternate" href="https://berita-cuan.github.io/viral/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html" hreflang="id-ID"/>
         <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/l4V2XGm.png"/>
         <link rel="apple-touch-icon" href="https://i.imgur.com/l4V2XGm.png"/>
         <link rel="icon" type="image/x-icon" href="https://i.imgur.com/l4V2XGm.png"/>
@@ -38,7 +38,7 @@
         <!-- Facebook -->
         <meta property="og:title" content="Tips Mudah Menang di Mahjong Ways 2 Hari Ini, Cek Panduan Maxwin di Sini!"/>
         <meta property="og:description" content="Temukan cara paling gampang menang di Mahjong Ways 2! Simak panduan lengkap untuk mendapatkan Maxwin hari ini, termasuk pola spin, fitur Free Spin, dan jam gacor terbaik."/>
-        <meta property="og:url" content="https://citilink-id.github.io/vip/cara-paling-gampang-menang-di-mahjong-ways-2-hari-ini.html"/>
+        <meta property="og:url" content="https://berita-cuan.github.io/viral/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html"/>
         <meta property="og:image" content="https://i.imgur.com/Rp4mmRQ.png"/>
         <meta property="og:image:type" content="image/jpg"/>
         <meta property="og:site_name" content="Jawa barat"/>
@@ -155,7 +155,7 @@
             "@type": "Organization",
             "name": "Jawa barat",
             "alternateName": "Tips Mudah Menang di Mahjong Ways 2 Hari Ini, Cek Panduan Maxwin di Sini!",
-            "url": "https://citilink-id.github.io/vip/cara-paling-gampang-menang-di-mahjong-ways-2-hari-ini.html",
+            "url": "https://berita-cuan.github.io/viral/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html",
             "logo": "https://i.imgur.com/l4V2XGm.png"
           }
         </script>
@@ -167,12 +167,12 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://citilink-id.github.io/vip/cara-paling-gampang-menang-di-mahjong-ways-2-hari-ini.html"
+              "item": "https://berita-cuan.github.io/viral/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html"
             }, {
               "@type": "ListItem",
               "position": 2,
               "name": "Jawa barat",
-              "item": "https://citilink-id.github.io/vip/cara-paling-gampang-menang-di-mahjong-ways-2-hari-ini.html"
+              "item": "https://berita-cuan.github.io/viral/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html"
             }]
           }
         </script>
@@ -182,7 +182,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "https://citilink-id.github.io/vip/cara-paling-gampang-menang-di-mahjong-ways-2-hari-ini.html"
+              "@id": "https://berita-cuan.github.io/viral/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html"
             },
             "headline": "Tips Mudah Menang di Mahjong Ways 2 Hari Ini, Cek Panduan Maxwin di Sini!",
             "description": "Temukan cara paling gampang menang di Mahjong Ways 2! Simak panduan lengkap untuk mendapatkan Maxwin hari ini, termasuk pola spin, fitur Free Spin, dan jam gacor terbaik.",
@@ -190,7 +190,7 @@
             "author": {
               "@type": "Organization",
               "name": "Jawa barat",
-              "url": "https://citilink-id.github.io/vip/cara-paling-gampang-menang-di-mahjong-ways-2-hari-ini.html"
+              "url": "https://berita-cuan.github.io/viral/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html"
             },
             "publisher": {
               "@type": "Organization",
@@ -214,8 +214,8 @@
             </div>
           </div>
           <div class='button-wrapper'>
-            <a href='https://rajapupuksawit.pro/OYO777dc' rel = "nofollow" class='btn-secondary'>Daftar</a>
-            <a href='https://rajapupuksawit.pro/OYO777dc' rel = "nofollow" class='btn-primary'>Login</a>
+            <a href='https://t.ly/alt-oyo777' rel = "nofollow" class='btn-secondary'>Daftar</a>
+            <a href='https://t.ly/alt-oyo777' rel = "nofollow" class='btn-primary'>Login</a>
           </div>
         </div>
       <br>
@@ -235,10 +235,10 @@
         <section class='n-container m-b-normal'>
       <div class="btn-body">
         <div class="btn-items">
-          <a href="https://rajapupuksawit.pro/OYO777dc" rel="nofollow noreferrer" target="_blank">🌟 Klaim Bonus 🌟</a>
+          <a href="https://t.ly/alt-oyo777" rel="nofollow noreferrer" target="_blank">🌟 Klaim Bonus 🌟</a>
         </div>
         <div class="btn-items">
-          <a href="https://rajapupuksawit.pro/OYO777dc" rel="nofollow noreferrer" target="_blank">🌟 DAFTAR 🌟</a>
+          <a href="https://t.ly/alt-oyo777" rel="nofollow noreferrer" target="_blank">🌟 DAFTAR 🌟</a>
         </div>
       </div>
     </section>
@@ -309,7 +309,7 @@
         </section>
     
         <section class='n-container m-b-normal'>
-          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://citilink-id.github.io/vip/cara-paling-gampang-menang-di-mahjong-ways-2-hari-ini.html" class="rainbow-text">Citilink-ID. All Rights Reserved. 18+</span></div>
+          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://berita-cuan.github.io/viral/tips-mudah-menang-di-mahjong-ways-2-hari-ini.html" class="rainbow-text">Citilink-ID. All Rights Reserved. 18+</span></div>
         </section>
       </body>
     </html>
