penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html

--- a/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html
+++ b/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html
@@ -147,12 +147,12 @@
     rel="nofollow noopener"><span></span>
     <span></span>
     <span></span>
-    <span></span>WINJDI</a>
-    <a href="https://fjba.short.gy/folkstdm" class="animated-button1" target="_blank"
+    <span></span>OVOSLOT88</a>
+    <a href="https://t.ly/github-ovoslot88" class="animated-button1" target="_blank"
     rel="nofollow noopener"><span></span>
     <span></span>
     <span></span>
-    <span></span>STADIUM168</a>
+    <span></span>OVOSLOT88</a>
 </div>
 <div class="link-container container">
   <button class="register-button">
