penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html

--- a/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html
+++ b/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html
@@ -11,8 +11,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no" />
-    <link rel="canonical" href="https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html" />
-    <link rel="alternate" hreflang="id" href="https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html" />
+    <link rel="canonical" href="https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html" />
+    <link rel="alternate" hreflang="id" href="https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html" />
     <link rel="apple-touch-icon-precomposed" href="https://res.cloudinary.com/dw61cpnlj/image/upload/v1739332374/verif_bdjfma.png">
     <link rel="icon" href="https://res.cloudinary.com/dw61cpnlj/image/upload/v1739332374/verif_bdjfma.png" type="image/png">
     <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dw61cpnlj/image/upload/v1739332374/verif_bdjfma.png" />
@@ -36,7 +36,7 @@
     <!-- Facebook -->
     <meta property="og:title" content="Panduan Pakai Aplikasi Penambah Saldo Dana untuk Seru Bermain Mahjong Ways!" />
     <meta property="og:description" content="emukan langkah mudah untuk menambah saldo Dana Anda dan nikmati pengalaman bermain Mahjong Ways lebih seru. Dari proses top-up hingga tips cerdas, artikel ini akan membantu Anda memaksimalkan kesenangan dan peluang menang di game game populer ini" />
-    <meta property="og:url" content="https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html" />
+    <meta property="og:url" content="https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html" />
     <meta property="og:image" content="https://i.imgur.com/E3abLnz.jpeg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:site_name" content="SEO HOKI DOANG" />
@@ -72,7 +72,7 @@
     "@type": "Organization",
     "name": "SEO HOKI DOANG",
     "alternateName": "Panduan Pakai Aplikasi Penambah Saldo Dana untuk Seru Bermain Mahjong Ways!",
-    "url": "https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html",
+    "url": "https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html",
     "logo": "https://res.cloudinary.com/dw61cpnlj/image/upload/v1739332374/verif_bdjfma.png"
   }
 </script>
@@ -84,12 +84,12 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html"
+          "item": "https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html"
         }, {
           "@type": "ListItem",
           "position": 2,
           "name": "SEO HOKI DOANG",
-          "item": "https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html"
+          "item": "https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html"
         }]
       }
 </script>
@@ -99,7 +99,7 @@
       "@type": "NewsArticle",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html"
+        "@id": "https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html"
       },
       "headline": "Panduan Pakai Aplikasi Penambah Saldo Dana untuk Seru Bermain Mahjong Ways!",
       "description": "emukan langkah mudah untuk menambah saldo Dana Anda dan nikmati pengalaman bermain Mahjong Ways lebih seru. Dari proses top-up hingga tips cerdas, artikel ini akan membantu Anda memaksimalkan kesenangan dan peluang menang di game game populer ini",
@@ -107,7 +107,7 @@
       "author": {
         "@type": "Organization",
         "name": "SEO HOKI DOANG",
-        "url": "https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html"
+        "url": "https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html"
       },
       "publisher": {
         "@type": "Organization",
@@ -127,7 +127,7 @@
 <body>
    
   <div class="logo-container">
-    <a href="https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html" class="logo">
+    <a href="https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html" class="logo">
         <amp-img title="Logo stargame" layout="responsive" height="30" width="120" src="https://i.imgur.com/IvJwgHQ.png" alt="logo stargame" noloading></amp-img>
     </a>
 </div>
@@ -245,7 +245,7 @@
         <div class="copyright">
 
             <section class='n-container m-b-normal'>
-                <div class='container' style='text-align: center;'><span>© 2025 <a href="https://bantargebangkota.github.io/news/cara-menggunakan-aplikasi-penambah-saldo-dana-untuk-meningkatkan-keseruan-bermain-mahjong-ways.html">Copyright by SEO HOKI DOANG All Rights Reserved.</a></span></div>
+                <div class='container' style='text-align: center;'><span>© 2025 <a href="https://berita-cuan.github.io/viral/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html">Copyright by SEO HOKI DOANG All Rights Reserved.</a></span></div>
               </section>
     </div>
 </body>
