penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html

--- a/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html
+++ b/penambah-saldo-dana-untuk-seru-bermain-mahjong-ways.html
@@ -168,7 +168,7 @@
 <tbody>
 <tr bgcolor="#3e3e3e">
 <td style="padding: 5px;width:20%,"><strong>Penyedia Game </strong></td>
-<td style="padding: 5px;"><strong>SERVER THAILAND</strong></td>
+<td style="padding: 5px;"><strong>OVOSLOT88</strong></td>
 </tr>
 <tr bgcolor="#2f2f2f">
 <td style="padding: 5px; "><strong>Minimal Deposit </strong></td>
